[package]
name = "socket"
version = "0.0.1"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
serde_json = "1.0"
structopt = "0.3"
walkdir = "2.3"
sass-rs = "0.2"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
